# learn_opengl

./: .gitignore  CMakeLists.txt
main_program/: CMakeLists.txt  main.cpp
opengl/: CMakeLists.txt
opengl/inc/: gl_error_check.h  iBuffer.h  index_buffer.h  shader.h  texture_buffer2D.h  vertex_array.h  vertex_attribute_ptr.h  vertex_buffer.h
opengl/res/shader/: basic.shader  lightning.shader
opengl/src/: gl_error_check.cpp  index_buffer.cpp  shader.cpp  texture_buffer2D.cpp  vertex_array.cpp  vertex_buffer.cpp
